--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
             </button>
         </div>
         <div class="flex flex-wrap justify-center mt-2">
-            <img class="rounded-lg" src="assets/images/pic-share.png" alt="Pic Share">
+            <img class="rounded-lg" src="assets/images/pic-share.jpg" alt="Pic Share">
         </div>
         <div class="flex flex-col justify-left mt-4 sm:mt-6 space-y-4">
             <h5 class="text-xl sm:text-2xl font-semibold tracking-tight text-slate-100">
