--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="absolute top-0 left-0 right-0 z-50">
             <div class="hidden sm:flex  flex-wrap items-center justify-center px-4 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24">
                 <div class="flex flex-row space-x-24 py-6">
-                    <a href="/web-portofolio" class="font-semibold text-slate-200 text-base hover:text-slate-400">
+                    <a href="/" class="font-semibold text-slate-200 text-base hover:text-slate-400">
                         Home
                     </a>
                     <a href="#tech-stack" class="font-semibold text-slate-200 text-base hover:text-slate-400">
